--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ jobs:
           # - mv settings.xml $HOME/.m2/settings.xml
         after_success:
           - yarn coveralls
-        script: |
-          yarn build &&
-          git add . &&
-          git commit --no-verify -m \"dogfood pre-release\" &&
-          npx semantic-release
+        script:
+          - yarn build
+          # - git add .
+          # git commit --no-verify -m \"dogfood pre-release\" &&
+          # npx semantic-release
