--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,13 @@ jobs:
       node_js:
         - "8.9.4"
       script: skip
-      deploy:
-        provider: script
-        skip_cleanup: true
-        after_deploy:
-          - yarn build
-          - git add . && git commit --no-verify -m \"dogfood for release\"
-          - npx semantic-release
-          - mkdir ./.nyc_output
-          - yarn coveralls
+      # deploy:
+      #   provider: script
+      #   skip_cleanup: true
+      #   after_deploy:
+      #     - yarn build
+      #     - git add . && git commit --no-verify -m \"dogfood for release\"
+      #     - npx semantic-release
+      #     - mkdir ./.nyc_output
+      #     - yarn coveralls
 
