--- a/package.json
+++ b/package.json
@@ -70,13 +70,13 @@
     "lint": "(yarn standard) | snazzy",
     "lint:fix": "(yarn standard --fix) | snazzy",
     "validate": "yarn lint:fix && yarn coverage",
-    "precommit": "yarn validate",
     "document": "node src/CLI/hubi s -t site -o docs && mv docs/index.hubi.html docs/index.html",
     "document:watch": "npm-watch document",
     "coveralls": "cat ./nyc_output/lcov.info | coveralls",
     "dogfood": "node src/CLI/hubi s -st joi",
     "dogfood:watch": "npm-watch dogfood",
-    "build": "yarn dogfood & yarn document"
+    "build": "yarn dogfood & yarn document",
+    "commit": "npx git-cz"
   },
   "dependencies": {
     "commander": "^2.15.1",
@@ -88,12 +88,15 @@
     "write": "^1.0.3"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^7.5.0",
     "@semantic-release/git": "^7.0.6",
     "@semantic-release/npm": "^5.1.2",
+    "commitizen": "^3.0.7",
     "coveralls": "^3.0.0",
     "cucumber": "^4.0.0",
+    "cz-conventional-changelog": "2.1.0",
     "faker": "^4.1.0",
-    "husky": "^0.14.3",
+    "husky": "^1.3.1",
     "mocha": "^5.0.5",
     "mocha-lcov-reporter": "^1.3.0",
     "npm-watch": "^0.3.0",
@@ -132,7 +135,7 @@
   "engines": {
     "node": ">=8.9.4",
     "npm": ">=5.6.0",
-    "yarn": "1.3.2"
+    "yarn": "1.13.0"
   },
   "standard": {
     "env": [
@@ -153,5 +156,10 @@
     "developer-tools",
     "domain-driven-design",
     "command-line"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
