--- a/src/Domain/Objects/AttributeParser/Attributes/attribute.yml
+++ b/src/Domain/Objects/AttributeParser/Attributes/attribute.yml
@@ -14,10 +14,13 @@ attributes:
     default: false
   - name: description
     description: A short sentence to teach/remind everyone what that attribute means
+    default: 'null'
   # - name: default # its type depends on the attribute's type
   # - name: deprecated # can be a string, a boolean or an object
   - name: comment
     description: An extra message, for developers, about the attribute
+    default: "null"
+    comment: This very sentence is a comment itself
 aliases:
   - Characteristic
   - Member
