--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
   "engines": {
     "node": ">=8.9.4",
     "npm": ">=5.6.0",
-    "yarn": "1.13.0"
+    "yarn": ">=1.3.2"
   },
   "standard": {
     "env": [
