--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ jobs:
   include:
     - stage: release
       if: branch = master
-      node_js:
-        - "8.9.4"
-      script: skip
+      node_js: "8.9.4"
+      script: npx semantic-release
       # deploy:
       #   provider: script
       #   skip_cleanup: true
