--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ jobs:
     - stage: release
       if: branch = master
       node_js: "8.9.4"
-      script: npx semantic-release
+      script: echo "cannot release from travis"
       # deploy:
       #   provider: script
       #   skip_cleanup: true
