--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,17 @@ before_install:
   - sudo apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386
 cache:
   yarn: true
+after_success:
+  - ls
 jobs:
   include:
     - stage: release
       if: branch = master
       node_js: "8.9.4"
-      script: echo "cannot release from travis"
+      script: skip
+      after_script:
+        - mkdir ./.nyc_output
+        - yarn coveralls
       # deploy:
       #   provider: script
       #   skip_cleanup: true
