chore(package): add lint-staged
to speed up the development process, instead of running validation for every file, now it runs only
for JS files

--- a/.huskyrc
+++ b/.huskyrc
@@ -1,6 +1,6 @@
 {
   "hooks": {
-    "pre-commit": "yarn validate",
+    "pre-commit": "lint-staged",
     "commit-msg": "npx commitlint -E HUSKY_GIT_PARAMS"
   }
 }
