--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "cz-conventional-changelog": "2.1.0",
     "faker": "^4.1.0",
     "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
     "mocha": "^5.0.5",
     "mocha-lcov-reporter": "^1.3.0",
     "npm-watch": "^0.3.0",
