--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@semantic-release/git": "^7.0.6",
     "@semantic-release/npm": "^5.1.2",
     "commitizen": "^3.0.7",
+    "commitlint": "^7.5.2",
     "coveralls": "^3.0.0",
     "cucumber": "^4.0.0",
     "cz-conventional-changelog": "2.1.0",
