feat(service): create a service to load tokens from files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.DS_Store
 
 # Created by https://www.gitignore.io/api/node,sublimetext
 # Edit at https://www.gitignore.io/?templates=node,sublimetext
