test(translation): implement basic tests to the watch flag

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,5 @@ jobs:
         - mkdir ./.nyc_output && yarn coverage
         - yarn coveralls
         - npx semantic-release
-
+env:
+  - NODE_ENV=PRODUCTION
