--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.DS_Store
+.todo
 
 # Created by https://www.gitignore.io/api/node,sublimetext
 # Edit at https://www.gitignore.io/?templates=node,sublimetext
